# ROS2-Gazebo-GO2

./: README.md
install/: local_setup.sh  setup.sh
install/gazebo_sim/share/gazebo_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_sim/share/gazebo_sim/config/: ekf.yaml  gz_bridge.yaml  robots.yaml
install/gazebo_sim/share/gazebo_sim/launch/: gazebo_multi_go2.launch.py  launch.py  launch_sim.launch.py  rviz_launch.py
install/gazebo_sim/share/gazebo_sim/rviz/: go2_sim.rviz
install/gazebo_sim/share/gazebo_sim/world/: cafe.world
install/go1_description/share/go1_description/: local_setup.sh  package.sh
install/go1_description/share/go1_description/config/: robot_control.yaml
install/go1_description/share/go1_description/launch/: joints_move.launch.py  launch_sim.launch.py
install/go1_description/share/go1_description/xacro/: gazebo.xacro  robot.xacro
install/go2_description/share/go2_description/: package.sh
install/go2_description/share/go2_description/launch/: description.launch.py
install/quadropted_controller/lib/quadropted_controller/: .QuadrupedOdometryNode.py.swp
install/quadropted_controller/share/quadropted_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadropted_msgs/share/quadropted_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cartographer/: CMakeLists.txt  package.xml
src/cartographer/config/: go2_cartographer.lua
src/cartographer/launch/: go2_cartographer.launch.py  slam_toolbox.launch.py
src/cartographer/maps/: warehouse_map.pgm  warehouse_map.yaml
src/cartographer/rviz/: go2_cartographer.rviz
src/docker/: Dockerfile  cyclonedds.xml  docker-compose.yml
src/gazebo_sim/: CMakeLists.txt
src/gazebo_sim/launch/: gazebo_go2_self.launch.py  gazebo_go2_sensors.launch.py  gazebo_multi_go2.launch.py  launch.py  launch_sim.launch.py
src/gazebo_sim/models/christman_L1/: model.config
src/gazebo_sim/models/christman_L1/meshes/: model.material
src/gazebo_sim/models/hotel_L1/: model.config
src/gazebo_sim/models/hotel_L1/meshes/: model.material
src/gazebo_sim/models/rmuc_2025/: model.config  model.sdf
src/gazebo_sim/rviz/: go2_self.rviz
src/gazebo_sim/world/: L02-S03-Fuel-ignition.sdf  L02-S05-custom_world.sdf  rmuc_2025_world.sdf
src/go1_description/: CMakeLists.txt  package.xml
src/go1_description/xacro/: depthCamera.xacro
src/go2_description/: CMakeLists.txt
src/go2_description/config/: ros_control.yaml
src/go2_description/meshes/: realsense.dae
src/go2_description/xacro/: gazebo.xacro  gazebo_VLP_D435i.xacro  robot_VLP_D435i.xacro
src/navigation2/: CMakeLists.txt  package.xml
src/navigation2/config/: robots.yaml
src/navigation2/launch/: go2_navigation2.launch.py
src/navigation2/param/: go2_nav2.yaml
src/navigation2/rviz/: go2_nav2.rviz
src/quadropted_controller/: CMakeLists.txt
src/quadropted_controller/launch/: robot_controller.launch.py
src/quadropted_controller/scripts/: QuadrupedOdometryNode.py  cmd_vel_pub.py  robot_controller_gazebo.py
src/quadropted_controller/scripts/RobotController/: CrawlGaitController.py  RestController.py  TrotGaitController.py
src/quadropted_controller/scripts/RoboticsUtilities/: Transformations.py
src/quadropted_msgs/: CMakeLists.txt  package.xml
(+80 files in other folders)
